--- a/Music-Library/docker1-compose.yml
+++ b/Music-Library/docker1-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '3.5'
 
 # Services
 services:
@@ -8,14 +8,10 @@ services:
     build:
       dockerfile: ./docker/php/dockerfile
       context: .
-    environment:
-      SSMTP_MAILHUB: mailhog:1025
-      PHP_SENDMAIL_PATH: '"/usr/bin/dos2unix -u | /usr/sbin/ssmtp -t -f"'
     volumes:
       - './:/var/www/html'
     depends_on:
       - mariadb
-      - mailhog
 
   # Nginx Service
   nginx:
@@ -34,31 +30,14 @@ services:
   mariadb:
     image: mariadb:latest
     environment:
-      MYSQL_DATABASE: newsletters
+      MYSQL_DATABASE: MusicLibrary
       MYSQL_USER: db_user
       MYSQL_PASSWORD: mijn_p@ss#
       MYSQL_ROOT_PASSWORD: 4dy5qwtrsag#!sad
     ports:
-      - 3309:3306
+      - 3307:3306
     volumes:
       - './docker/mysqldata:/var/lib/mysql'
-
-  # mailhog
-  mailhog:
-    image: mailhog/mailhog:latest
-    ports:
-      - 1025:1025
-      - 8025:8025
-
-  # php myadmin in an external image
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    environment:
-      PMA_HOST: mariadb
-      PMA_USER: db_user
-      PMA_PASSWORD: mijn_p@ss#
-    ports:
-      - "8088:80"
 
 # Volumes
 volumes:
